[Settings]: Fix overflow-x scrollbar issue

--- a/Application/src/Pages/DashBoard/MyPostersSection.css
+++ b/Application/src/Pages/DashBoard/MyPostersSection.css
@@ -33,7 +33,7 @@
   margin: 10px;
 }
 
-#InnerMyPostersDiv span {
+.PosterSpan {
   display: flex;
   overflow-x: scroll !important;
 }
